2003-01-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h, src/cursor.cxx:
  - Rewrote positioning code.  SEEMS TO WORK NOW!
  - Added size()
 test/test27.cxx, test/test8.cxx:
  - Aligned test output
 test/test40.cxx:
  - Added test case where Cursor discovers its size spontaneously
2003-01-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h, src/cachedresult.cxx:
  - Make use of Cursor's absolute positioning.  NOT FUNCTIONAL YET.
 *:
  - Updated copyright notices
2002-12-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test18.cxx, test/test32.cxx, test/test37.cxx, test/test41.cxx:
  - Reduced (expected, but still confusing) error output
2002-12-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h, src/cursor.cxx:
  - Added absolute cursor positioning
 src/cursor.cxx:
  - Rewrote Move()/Fetch() row count logic
 test/test24.cxx:
  - Fixed year for Space Oddyssey
 test/test41.cxx:
  - Reduced overrun width being tested
 test/test43.cxx:
  - New
2002-12-23  Jeroen T. Vermeulen <jtv@xs4all.nL>
 include/pqxx/cursor.h, src/cursor.cxx, test/test42.cxx:
  - Cursor::Move() now always returns number of rows moved
 include/pqxx/*.h, src/*.cxx:
  - replaced some string arguments with const string &
2002-12-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h:
  - new version of Move() reports number of rows skipped
 include/pqxx/tablewriter.h:
  - inline TableWriter::FieldConverter::Escape()
  - fix Visual C++ version of operator()
 src/cursor.cxx:
  - report negative move distances for backward moves
 test/test42.cxx:
  - New
2002-12-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h:
  - replaced Result_size_type with Result::size_type (now visible in this file)
 include/pqxx/util.h:
  - eliminated Result_size_type_min and Result_size_type_max
2002-12-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h, src/cursor.cxx:
  - Introduced size_type typedef
 test/test13, test/test18, test/test32, test/test37: