@@ -1,7 +1,7 @@
 INCLUDES=-I../include ${POSTGRES_INCLUDE}
 MAINTAINERCLEANFILES=Makefile.in
 
-TESTS = test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11 test12 test13 test14 test15 test16 test17 test18 test19 test20 test21 test22 test23 test24 test25 test26 test27 test28 test29 test30 test31 test32 test33 test34 test35 test36 test37 test38 test39 test40 test41 test42 test43
+TESTS = test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11 test12 test13 test14 test15 test16 test17 test18 test19 test20 test21 test22 test23 test24 test25 test26 test27 test28 test29 test30 test31 test32 test33 test34 test35 test36 test37 test38 test39 test40 test41 test42 test43 test44
 check_PROGRAMS = ${TESTS}
 
 #TESTS_ENVIRONMENT=PGDATABASE=libpqxx
@@ -135,4 +135,7 @@ test42_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
 
 test43_SOURCES = test43.cxx
 test43_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+
+test44_SOURCES = test44.cxx
+test44_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
 
